--- a/style.css
+++ b/style.css
@@ -69,7 +69,13 @@ button {
   color: white;
 }
 
+.main-content{
+  display: flex;
+  justify-content: space-between;
+}
+
 .main-content section {
+  width: calc(50% - 10px);
   vertical-align: top;
 }
 
@@ -98,15 +104,28 @@ button {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-content: baseline;
+  align-items: baseline;
 }
 
 .parent-container .child-item {
   width: 100px;
-  /* height: 100px; */
+  height: 100px;
   border: 1px solid #9f9f9f;
 }
 
 .parent-container .child-1 {
   background: #d2d2d2;
+  align-self: flex-end;
+}
+
+.parent-container .child-2 {
+  align-self: center;
+}
+
+.parent-container .child-3 {
+  align-self: flex-start;
+}
+
+.parent-container .child-4 {
+  align-self: center;
 }
