--- a/style.css
+++ b/style.css
@@ -114,18 +114,23 @@ button {
 }
 
 .parent-container .child-1 {
+  order: 0;
   background: #d2d2d2;
   align-self: flex-end;
+  flex-grow: 1;
 }
 
 .parent-container .child-2 {
+  order: 0;
   align-self: center;
 }
 
 .parent-container .child-3 {
+  order: -1;
   align-self: flex-start;
 }
 
 .parent-container .child-4 {
+  order: 0;
   align-self: center;
 }
